--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -342,6 +342,7 @@
             </LinearLayout>
         </HorizontalScrollView>
 
+<!--
         <ImageView
             android:id="@+id/home_banner_iv"
             android:layout_width="wrap_content"
@@ -352,7 +353,16 @@
             app:layout_constraintTop_toBottomOf="@id/home_today_music_oversea_hs"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
+-->
 
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/home_banner_vp"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginTop="15dp"
+            app:layout_constraintTop_toBottomOf="@id/home_today_music_oversea_hs"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
 
 
