--- a/app/src/main/res/layout/fragment_album.xml
+++ b/app/src/main/res/layout/fragment_album.xml
@@ -141,7 +141,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <!--<androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/song_lalac_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -179,6 +179,6 @@
             android:textSize="10dp"
             app:layout_constraintTop_toBottomOf="@id/song_list_title_01_tv"
             app:layout_constraintStart_toStartOf="@id/song_list_title_01_tv"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
