Song에 대한 추가정보(진행시간, 총 시간, 재생여부) 연결

--- a/app/src/main/res/layout/activity_song.xml
+++ b/app/src/main/res/layout/activity_song.xml
@@ -161,13 +161,13 @@
         android:paddingStart="0dp"
         android:paddingEnd="0dp"
         android:progress="0"
+        android:progressBackgroundTint="@color/gray_color"
+        android:progressTint="@color/select_color"
         android:thumb="@color/transparent"
         android:max="100000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/song_like_iv_layout"  />
-    <!--android:progressBackgroundTint="@color/song_player_bg"
-        android:progressTint="@color/song_player"-->
 
     <TextView
         android:id="@+id/song_start_time_tv"
