--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -208,7 +208,7 @@
             app:layout_constraintEnd_toStartOf="@id/home_today_music_domestic_tv"
             app:layout_constraintTop_toBottomOf="@id/home_panel_background_iv"/>
 
-        <HorizontalScrollView
+        <!--<HorizontalScrollView
             android:id="@+id/home_today_music_oversea_hs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -340,7 +340,7 @@
 
                 </LinearLayout>
             </LinearLayout>
-        </HorizontalScrollView>
+        </HorizontalScrollView>-->
 
 <!--
         <ImageView
@@ -354,13 +354,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/home_music_album_rv"
+            android:layout_width="match_parent"
+            android:layout_height="210dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/home_today_music_total_tv"/>
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/home_banner_vp"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_marginTop="15dp"
-            app:layout_constraintTop_toBottomOf="@id/home_today_music_oversea_hs"
+            app:layout_constraintTop_toBottomOf="@id/home_music_album_rv"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
