--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -356,7 +356,7 @@
             app:layout_constraintEnd_toEndOf="parent"/>
 -->
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/home_music_album_rv"
+            android:id="@+id/home_today_music_album_rv"
             android:layout_width="match_parent"
             android:layout_height="210dp"
             android:layout_marginTop="10dp"
@@ -370,7 +370,7 @@
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_marginTop="15dp"
-            app:layout_constraintTop_toBottomOf="@id/home_music_album_rv"
+            app:layout_constraintTop_toBottomOf="@id/home_today_music_album_rv"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
