--- a/app/src/main/res/layout/fragment_locker.xml
+++ b/app/src/main/res/layout/fragment_locker.xml
@@ -5,12 +5,96 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
+        android:id="@+id/locker_title_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="locker"
+        android:text="보관함"
+        android:textSize="25dp"
+        android:textStyle="bold"
+        android:layout_marginTop="40dp"
+        android:layout_marginStart="20dp"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <TextView
+        android:id="@+id/locker_login_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="로그인"
+        android:textSize="15dp"
+        android:textColor="@color/select_color"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/locker_title_tv"
+        app:layout_constraintBottom_toBottomOf="@id/locker_title_tv"/>
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/locker_content_tb"
+        android:layout_width="170dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        app:tabSelectedTextColor="@color/select_color"
+        app:tabIndicatorColor="@color/select_color"
+        app:tabRippleColor="@color/transparent"
+        app:layout_constraintTop_toBottomOf="@id/locker_title_tv"
+        app:layout_constraintStart_toStartOf="parent"/>
+    
+    <ImageView
+        android:id="@+id/locker_select_all_img_iv"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:src="@drawable/btn_playlist_select_off"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="20dp"
+        app:layout_constraintTop_toBottomOf="@id/locker_content_tb"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <TextView
+        android:id="@+id/locker_select_all_img_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="전체선택"
+        app:layout_constraintStart_toEndOf="@id/locker_select_all_img_iv"
+        app:layout_constraintTop_toTopOf="@id/locker_select_all_img_iv"
+        app:layout_constraintBottom_toBottomOf="@id/locker_select_all_img_iv"/>
+
+    <ImageView
+        android:id="@+id/locker_play_all_img_iv"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:src="@drawable/icon_browse_arrow_right"
+        android:layout_marginStart="20dp"
+        app:layout_constraintStart_toEndOf="@id/locker_select_all_img_tv"
+        app:layout_constraintTop_toTopOf="@id/locker_select_all_img_iv"
+        app:layout_constraintBottom_toBottomOf="@id/locker_select_all_img_iv"/>
+
+    <TextView
+        android:id="@+id/locker_play_all_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="전체듣기"
+        app:layout_constraintStart_toEndOf="@id/locker_play_all_img_iv"
+        app:layout_constraintTop_toTopOf="@id/locker_select_all_img_iv"
+        app:layout_constraintBottom_toBottomOf="@id/locker_select_all_img_iv"/>
+
+    <TextView
+        android:id="@+id/locker_edit_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="편집"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/locker_select_all_img_iv"
+        app:layout_constraintBottom_toBottomOf="@id/locker_select_all_img_iv"/>
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/locker_content_vp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/locker_select_all_img_iv" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
